fixed scaling and overlap issues

--- a/style.css
+++ b/style.css
@@ -14,53 +14,57 @@ body, html {
 }
 
 .dashboard-left-side{
-    height: 100%;
-    width: 20%;
-    background-color: rgb(61, 195, 244);
+    width: fit-content;
+    background-color:  rgb(61, 195, 244);;
     color: rgb(0, 0, 0);
+    flex-shrink: 0;
 
 
 }
 
-.dash-text{
-    display: flex;
-    justify-content: first baseline;
-    align-items: center;
-}
 
-.dash-text > *{
-    margin-left: 10px;
-}
+
+
+
 
 a{
     text-decoration: none;
     color:rgb(0, 0, 0);
 }
 
+.vertical-nav{
+    height: 60%;
+    max-height: 500px;
+    place-items: center;
+}
+
 .nav-list{
-    margin-top: 10%;
+    
     display: grid;
-    margin-left: 20px;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 1fr;
     grid-auto-rows: 1fr;
     width: 80%;
-    grid-gap: 30px;
+    grid-gap: clamp(10px, 0.5vw, 30px);
     margin-bottom: 10%;
     height: 100%;
+    place-items: center;
 
     
     
 }
+
+
 
 .nav-list > a{
     margin-left: 0px;
     display: flex;
     align-content: center;
     align-items: center;
+    font-size: clamp(10pt,1.5vmin,17pt);
 }
 
 .nav-icons{
-    width: 100%;
+    width: 2rem;
     height: auto;
 }
 
@@ -68,10 +72,13 @@ a{
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 80%;
-    background-color: rgb(75, 74, 74);
-}
+    flex: 1;
+    background-color: rgb(104, 118, 122);
+    min-width: 800px;
+    min-height: 500px;
+    overflow-y: auto;
 
+}
 
 .main-greeting{
     display: flex;
@@ -87,9 +94,9 @@ a{
     display: grid;
     background-color: white;
     width: 100%;
-    grid-template-columns: 2.5fr 1fr;
+    grid-template-columns: 5fr 1fr;
     grid-template-rows: 1fr 1fr;
-    grid-gap: 10%;
+    
     align-items: center;
     box-shadow: 0px 5px  rgb(61, 195, 244);
 }
@@ -107,10 +114,12 @@ a{
 }
 .profile-bar{
     display: grid;
-    grid-template-columns: 1fr 2fr 3fr;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
-    margin-right: 30px;
+    margin-right: clamp(10px,15px,50px);
+    gap: clamp(15px,20px,50px);
+    place-items: center;
    
 
 
@@ -118,10 +127,15 @@ a{
 
 }
 
-.profile-bar > *{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.top-bar-name{
+    font-size: clamp(5pt,12pt,13pt);
+    text-wrap: nowrap;
+}
+
+
+.profile-icon{
+    width: clamp(20px,50%,30px);
+    height: auto;
 }
 .main-grid{
     padding-left: 10px;
@@ -132,20 +146,39 @@ a{
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    grid-gap: clamp(12px,1.5vw,40px);
     justify-content: center;
     box-sizing: border-box;
-    overflow-y: auto;
     flex: 1;
 
 
 }
 
 .announcements-bar{
+    display: grid;
     grid-column-start: 3;
     grid-row: 1 / 4;
     border-radius: 5px;
+    grid-template-rows: 1fr 1fr 1fr;
+    box-shadow: -8px 0px  rgb(183, 243, 5);
+
+    
 }
+
+.announcement{
+    margin-left: 10px;
+    text-wrap: wrap;
+    margin-right: 10px;
+    
+
+
+}
+
+.announcement:not(:last-child){
+    border-bottom: 1px solid grey;
+
+}
+
 
 .treading-bar{
     grid-column-start: 3;
@@ -153,6 +186,7 @@ a{
     box-sizing: border-box;
     margin-top: 30px;
     border-radius: 5px;
+    box-shadow: -8px 0px  rgb(183, 243, 5);
 }
 
 .main-grid > div{
@@ -167,13 +201,21 @@ a{
     box-shadow: -8px 0px  rgb(61, 195, 244);
     grid-row: span 2;
     border-radius: 5px;
-    font-size: clamp(8pt, 1vw, 18pt);
     overflow: hidden;
     position: relative;
+    min-height: 200px;
+
 
 
 }
 
+.project-card h4{
+    font-size: clamp(12pt,3vmin,20pt);
+}
+
+.project-card p{
+    font-size: clamp(10pt, 1.5vmin, 20pt);
+}
 
 
 .card-options{
@@ -188,6 +230,11 @@ a{
 
 }
 
+.card-options > *{
+    width: clamp(0px,5%,30px);
+    height: auto;
+}
+
 
 
 #search{
@@ -200,17 +247,20 @@ a{
 }
 
 .top-buttons{
-    display: grid;
+    display: flex;
     grid-template-columns: minmax(10px, 1fr) minmax(10px, 1fr) minmax(10px, 1fr);
-    grid-gap: 20px;
     height: 50%;
+    grid-gap: 10px;
     padding-right: 30px;
     
 }
+
 .top-buttons button{
     background-color: rgb(61, 195, 244);
     border-radius: 10px;
     color: rgb(0, 0, 0);
+    min-width: 50px;
+    max-width: 100px;
 
 
 }
